# RedInk

./: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER.md  DOCKER_SUMMARY.md  README.md  SSE_CONNECTION_FIX.md  docker-compose.yaml  docker-start.sh  image_providers.yaml.example  migrate_add_user_images.py  pyproject.toml  redink.db
.github/workflows/: docker-build.yml
backend/: .dockerignore  Dockerfile  app.py  auth.py  config.py  create_admin.py  db.py  diagnose_password.py  init_db.py  migrate_history.py  models.py  reset_password.py  worker.py
backend/generators/: image_api.py  openai_compatible.py
backend/prompts/: image_prompt.txt  outline_prompt.txt
backend/routes/: admin.py  api.py  auth.py
backend/services/: history.py  image.py  outline.py
backend/task_queue/: __init__.py  task_store.py
backend/tasks/: __init__.py  image_tasks.py  outline_tasks.py
backend/utils/: text_client.py
docs/: admin_setup.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  auth.ts  index.ts
frontend/src/assets/css/: animations.css  base.css  components.css  history.css  (+2 more)
frontend/src/components/: AuthModal.vue  ThemeSwitcher.vue  UserMenu.vue
frontend/src/composables/: useDraftRecovery.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  generator.ts  theme.ts
frontend/src/utils/: userId.ts
frontend/src/views/: GenerateView.vue  HistoryView.vue  HomeView.vue  OutlineView.vue  ResultView.vue
init-scripts/: 01-init.sql
(+8 files in other folders)
